--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "movies-chatbot",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
@@ -36,7 +37,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "api-ai-javascript": "^2.0.0-beta.20",
+    "api-ai-javascript": "^2.0.0-beta.14",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
